[project]
name = "nonebot-plugin-l4d2-server"
version = "0.6.3-post1"
description = "L4D2 server related operations plugin for NoneBot2"
authors = [
    { name = "Agnes_Digital", email = "Z735803792@163.com" }
]
requires-python = ">=3.9,<4.0"
keywords = ["steam", "game", "l4d2", "nonebot2", "plugin"]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-plugin-htmlrender==0.2.0.3",
    "nonebot_plugin_txt2img>=0.3.0",
    "nonebot-plugin-apscheduler>=0.2.0",
    "nonebot-adapter-onebot>=2.2.3",
    "nonebot-plugin-send-anything-anywhere>=0.2.7",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.4",
    "jinja2>=3.0.0",
    "srctools>=2.3.9",
    "bs4==0.0.1",
    "httpx>=0.22.0",
    "rcon==2.1.0",
    "pillow>=9.4.0",
    "pyunpack>=0.3.0",
    "ruamel.yaml>=0.17.21",
    "rarfile>=4.0",
    "patool>=1.12",
    "python-a2s>=1.3.0",
    "amis-python>=1.0.6",
    "pandas>=1.5.2",
    "python-jose>=3.3.0",
    "gitpython>=3.1.27",
    "attrs>=23.1.0",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]
readme = "README.md"
license = { text = "GPLv3" }

[project.urls]
homepage = "https://github.com/Agnes4m/nonebot_plugin_l4d2_server"

[tool.pdm.build]
includes = []


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pyright]
pythonVersion = "3.8"

[tool.black]
line-length = 89
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
# skip-string-normalization = true

[tool.ruff.isort]
extra-standard-library = ["typing_extensions"]

[tool.ruff]
ignore = [
    "B008",
    "B905",
    "E402",
    "E501",
    "FBT001",
    "FBT002",
    "FBT003",
    "PGH003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF100",
    "SIM117",
    "TRY002",
    "TRY003",

]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "E",
    "F",
    "FBT",
    "FLY",
    "I",
    "ISC",
    "N",
    "PIE",
    "PGH",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "TRY",
]
